--- a/src/main/resources/templates/admin/promotion-form.html
+++ b/src/main/resources/templates/admin/promotion-form.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Quản lý khuyến mãi</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
@@ -13,17 +14,19 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav mx-auto">
-            <div class="text-white ms-auto" th:if="${session.admin != null}">
-                👋 Xin chào, <strong th:text="${session.admin.username}">Admin</strong>
-              </div>
+          <div class="text-white ms-auto" th:if="${session.admin != null}">
+            👋 Xin chào, <strong th:text="${session.admin.username}">Admin</strong>
+          </div>
+  
           <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
-          <li class="nav-item"><a class="nav-link" href="/admin/promotion-form">Chỉnh sửa khuyến mãi </a></li>
-          <li class="nav-item"><a class="nav-link" href="/admin/news-form">Chỉnh sửa tin tức </a></li>
-          <li class="nav-item"><a class="nav-link" href="/admin/create-account">Tạo tài khoản </a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/promotion-form">Chỉnh sửa khuyến mãi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/news-form">Chỉnh sửa tin tức</a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/create-account">Tạo tài khoản</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/change-password">Đổi mật khẩu</a></li>
-          <li class="nav-item"><a class="nav-link" href="/admin/accounts">Danh sách tài khoản</a></li>    
+          <li class="nav-item"><a class="nav-link" href="/admin/accounts">Danh sách tài khoản</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/services">Quản lí dịch vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/categories">Danh sách loại xe</a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/colors">Chỉnh sửa màu xe</a></li>
         </ul>
       </div>
     </nav>
