--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CITY FORD – FORD BÌNH TRIỆU</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
@@ -39,6 +40,7 @@
   
           <li class="nav-item"><a class="nav-link" href="/news">Tin tức</a></li>
           <li class="nav-item"><a class="nav-link" href="/promotions">Khuyến mãi</a></li>
+          <li class="nav-item"><a class="nav-link" href="/car/tham-khao-xe">Tham khảo xe</a></li>
           <li class="nav-item"><a class="nav-link" href="/installment">Mua xe trả góp</a></li>
           <li class="nav-item"><a class="nav-link" href="/services">Dịch vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ</a></li>
