Ghi đè toàn bộ source từ VS Code

--- a/src/main/resources/templates/admin/account-list.html
+++ b/src/main/resources/templates/admin/account-list.html
@@ -45,6 +45,7 @@
               <li class="nav-item"><a class="nav-link" href="/admin/services">Quản lí dịch vụ</a></li>
               <li class="nav-item"><a class="nav-link" href="/admin/categories">Danh sách loại xe</a></li>
               <li class="nav-item"><a class="nav-link" href="/admin/colors">Chỉnh sửa màu xe</a></li>
+              <li class="nav-item"><a class="nav-link" href="/admin/bookings">Danh sách đặt lịch</a></li>
             </ul>
           </div>
         </nav>
