--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -34,6 +34,8 @@
           <li class="nav-item"><a class="nav-link" href="/admin/services">Quản lí dịch vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/categories">Danh sách loại xe</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/colors">Chỉnh sửa màu xe</a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/bookings">Danh sách đặt lịch</a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/test-drive/list">Yêu cầu lái thử</a></li>
         </ul>
       </div>
     </nav>
