--- a/src/main/resources/templates/admin/service-list.html
+++ b/src/main/resources/templates/admin/service-list.html
@@ -51,12 +51,13 @@
           <li class="nav-item"><a class="nav-link" href="/admin/services">Quản lí dịch vụ</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/categories">Danh sách loại xe</a></li>
           <li class="nav-item"><a class="nav-link" href="/admin/colors">Chỉnh sửa màu xe</a></li>
+          <li class="nav-item"><a class="nav-link" href="/admin/bookings">Danh sách đặt lịch</a></li>
         </ul>
       </div>
     </nav>
   </div>
       <div class="container mt-5">
-        <!-- Thông báo -->
+       
         <div th:if="${message}" class="alert alert-success text-center">
           <span th:text="${message}">Thao tác thành công!</span>
         </div>
