--- a/src/main/resources/templates/car-reference.html
+++ b/src/main/resources/templates/car-reference.html
@@ -61,7 +61,7 @@
     <div id="bannerCarousel" class="carousel slide mb-4" data-bs-ride="carousel" data-bs-interval="2000">
         <div class="carousel-inner">
             <div th:each="banner, stat : ${banners}" th:class="'carousel-item' + (${stat.index == 0} ? ' active' : '')">
-                <img th:src="@{'/images/' + ${banner.imagePath}}" class="d-block w-100 img-fluid rounded shadow" th:alt="${banner.title}">
+                <img th:src="${banner.imagePath}" class="d-block w-100 img-fluid rounded shadow" th:alt="${banner.title}">
                 <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2"></div>
             </div>
         </div>
@@ -80,7 +80,7 @@
     <div class="row">
         <div th:each="car : ${cars}" class="col-md-6 mb-4">
             <div class="card shadow-sm">
-                <img th:src="@{'/images/' + ${car.imagePath}}" alt="Ảnh xe" class="car-image">
+                <img th:src="${car.imagePath}" alt="Ảnh xe" class="car-image">
                 <div class="card-body">
                     <h5 th:text="${car.name}">Tên xe</h5>
                     <p><strong>Model:</strong> <span th:text="${car.model}">Titanium</span></p>
